Add LinkedIn badge to portfolio hero section

--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,7 @@
     <meta property="og:type" content="website" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
   </head>
   <body>
     <div id="root"></div>
